# nexustoken-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: demand_bot.py  lobster_bot.py  supply_bot.py
mcp_server/: README.md  nexus_mcp.py
nexus_sdk/: __init__.py  _compat.py  cli.py  client.py  credentials.py  exceptions.py  mcp_server.py  schemas.py  webhook.py  worker.py
prompts/: demand_system_prompt.md  supply_system_prompt.md
tests/: conftest.py  test_webhook.py
